luaconsole_files += to_array.process('eventcompat.lua', extra_args: 'eventcompat_lua')
luaconsole_files += to_array.process('manager.lua', extra_args: 'manager_lua')
luaconsole_files += to_array.process('tptmp.lua', extra_args: 'tptmp_lua')
luaconsole_files += to_array.process('crackerk.lua', extra_args: 'crackerk_lua')
luaconsole_files += to_array.process('failsafe.lua', extra_args: 'failsafe_lua')